metadata/force-app/main/default/objects/CustomName_JjuWB__c/CustomName_JjuWB__c.object-meta.xml
<CustomObject>
    <description>Description_AdLOk</description>
    <label>CustomLabel_YMUTY</label>
    <nameField>
        <label>CustomLabel_YMUTY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_YMUTYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>