metadata/force-app/main/default/objects/CustomName_JjuWB__c/fields/CustomField_DAHOM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DAHOM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldXzyTG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>