metadata/force-app/main/default/objects/CustomName_JjuWB__c/fields/CustomField_HGBZl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_HGBZl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLTuJi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>