metadata/force-app/main/default/objects/CustomName_JjuWB__c/fields/CustomField_mtWxn__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mtWxn__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhwYDA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>