metadata/force-app/main/default/objects/CustomName_JjuWB__c/fields/CustomField_qZusp__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qZusp__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddExyG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>