metadata/force-app/main/default/objects/CustomName_JjuWB__c/fields/CustomField_SHhWh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SHhWh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlNaXV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>